BugFix: Stop overflow of title to author text

--- a/style.css
+++ b/style.css
@@ -77,8 +77,12 @@ main {
   grid-row: 2/3;
   display: grid;
 }
+
 main .booksContainer {
   background-color: yellow;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .noBooks {
@@ -87,7 +91,6 @@ main .booksContainer {
   grid-template-rows: 50px auto auto auto; */
   background-color: lightblue;
   padding: 15px;
-  /* align-content: center;s */
   text-align: center;
   font-weight: 600;
   font-size: 40px;
@@ -96,9 +99,10 @@ main .booksContainer {
 
 .bookCard {
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 60% 20% auto;
   grid-template-rows: 50px auto auto auto;
-  /* width: 80%; */
+
+  min-width: 50%;
   min-height: 150px;
   background-color: lightblue;
   padding: 15px 25px;
@@ -113,17 +117,22 @@ main .booksContainer {
   grid-column: 1/2;
 }
 
+.bookTitle {
+  padding: 5px 0;
+  grid-row: 1/ 3;
+}
+
 .bookCard i.fa-book {
   align-self: center;
   justify-self: center;
   grid-row: 1/5;
-  grid-column: 2/3;
+  grid-column: 3/4;
   font-size: 60px;
 }
 
 .bookCard i.fa-trash-can {
   justify-self: end;
-  grid-column: 2/3;
+  grid-column: 3/4;
   font-size: 30px;
   color: rgba(206, 8, 8, 0.847);
 }
